# mimir

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md
mimir/: Cargo.toml
mimir/src/: error.rs  lib.rs
mimir/src/common/: encoding.rs  mod.rs  version.rs
mimir/src/connection/: mod.rs
mimir/src/context/: mod.rs  params.rs
mimir/src/data/: mod.rs
mimir/src/enqueue/: mod.rs
mimir/src/message/: mod.rs
mimir/src/object/: mod.rs
mimir/src/odpi/: enums.rs  externs.rs  mod.rs  structs.rs
mimir/src/pool/: mod.rs
mimir/src/rowid/: mod.rs
mimir/src/statement/: mod.rs
mimir/src/subscription/: mod.rs
mimir/tests/: lib.rs
mimir/tests/connection/: mod.rs
mimir/tests/enqueue/: mod.rs
mimir/tests/lob/: mod.rs
mimir/tests/message/: mod.rs
mimir/tests/pool/: mod.rs
mimir/tests/statement/: mod.rs
mimiron/: Cargo.toml  README.md
mimiron/src/: error.rs  macros.rs  main.rs  run.rs
scripts/: clippy  setup_test.sql
src/: error.rs  lib.rs  macros.rs  util.rs
src/common/: error.rs
src/connection/: mod.rs
src/context/: mod.rs  params.rs
src/data/: mod.rs
src/dequeue/: mod.rs
src/enqueue/: mod.rs
src/lob/: mod.rs
src/message/: mod.rs
src/object/: mod.rs
src/objectattr/: mod.rs
src/objecttype/: mod.rs
src/odpi/: constants.rs  enums.rs  externs.rs  flags.rs  mod.rs  opaque.rs  structs.rs
src/pool/: mod.rs
src/query/: mod.rs
src/rowid/: mod.rs
src/statement/: mod.rs
src/subscription/: mod.rs
src/variable/: mod.rs
tests/: lib.rs
tests/connection/: mod.rs
tests/context/: mod.rs
tests/dequeue/: mod.rs
(+24 files in other folders)
