[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Rust bindings over the Oracle Database Programming Interface for Drivers and Applications"
documentation = "http://rustyhorde.github.io/mimir"
homepage = "http://rustyhorde.github.io/mimir"
keywords = ["oracle", "driver", "bindings"]
license = "MIT/Apache-2.0"
name = "mimir"
readme = "README.md"
repository = "https://github.com/rustyhorde/mimir"
version = "0.1.1"

[build-dependencies]
gcc = "0.3.45"

[dependencies]
bitflags = "0.9.1"
error-chain = "0.11.0-rc.2"
getset = "0.0.5"
lazy_static = "0.2.8"
rand = "0.3.15"
slog = "2.0.2"

[dependencies.chrono]
features = ["serde"]
version = "0.4"
